z-index fixed

--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -85,7 +85,7 @@
     background-clip: text;
     -webkit-text-stroke: 2px #343137; 
     transform: translateY(50px);
-    z-index: 1;
+    z-index: -1;
     overflow: hidden;
 }
 
